# ergoCub_ros2

./: CMakeLists.txt  LICENSE  c_cpp_properties.json  ergoCub_controller_plugin.xml  package.xml
behavior_trees/: navigate_to_pose_w_replanning_and_recovery_decorator.xml
dwb_core/: CMakeLists.txt
dwb_core/include/dwb_core/: dwb_local_planner.hpp
dwb_core/src/: dwb_local_planner.cpp
include/: odometry_standalone.hpp
launch/: CoM_trajectory_pub.launch.py  chest_projection.launch.py  dummy_planner.launch.py  ergoCub_amcl_nav2.launch.py  ergoCub_nav2.launch.py  ergoCub_nav2_TEB.launch.py  ergoCub_rviz.launch.py  footprints_viewer.launch.py  map_server.launch.py  nav2_stack.launch.py  odometry_gt.launch.py  odometry_setup.launch.py  point_cloud_xyz.launch.py  proto_launch.launch.py  robot_state_publisher.launch  robot_state_publisher.launch.py  scan_filtering.launch.py  scan_filtering_compensated.launch.py  setup_localization.launch.py  setup_robot.launch.py  simple_navigation.launch.py  simulation_setup.launch.py  test.launch  virtual_unicycle_publisher.launch.py  vslam.launch.py
launch/amcl/: map_server.launch.py
launch/setup_robot/: point_cloud_xyz.launch.py  robot_state_publisher.launch.py
launch/vslam/: rviz_vslam.launch.py
maps/: map.yaml
odometry_callback/: main.cpp
odometry_callback/include/: odometry_callback.hpp  yarp_odometry_processor.hpp
odometry_callback/src/: odometry_callback.cpp  yarp_odometry_processor.cpp
odometry_standalone/: main.cpp
odometry_standalone/include/: odometry_standalone.hpp
odometry_standalone/src/: odometry_standalone.cpp
param/: ergoCub_amcl_nav2.yaml  ergoCub_nav2.yaml  ergoCub_nav2_DWB.yaml  ergoCub_nav2_TEB.yaml  ergocub_nav2.yaml  gazebo_params.yaml  nav2_global_planner_only.yaml  realsense.yaml  stella_vslam.yaml
planner_trigger/: planner_trigger_server.cpp
rviz/: ecub.rviz  nav2.rviz  stella_vslam.rviz
src/: CoM_trajectory_publisher.cpp  async_walking_controller_talker.cpp  chest_projection.cpp  feet_port_listener.cpp  footsteps_viewer.cpp  interpolation_walking_controller_talker.cpp  obstacle_script.cpp  odom_GT.cpp  odometry_lifeCycle.cpp  odometry_standalone.cpp  path_converter.cpp  piecewise_path_converter.cpp  scan_filtering_ros2.cpp  scan_filtering_ros2_compensated.cpp  scan_filtering_ros2_simple.cpp  setpoint_converter.cpp  velocity_setpoint_converter.cpp  virtual_unicycle_publisher.cpp  walking_controller_talker.cpp  walking_controller_talker_async.cpp
trajectory_controller/include/: trajectory_controller.hpp
trajectory_controller/src/: trajectory_controller.cpp
unicyclePlanner_tests/: ProtoCode.cpp  dummy_planner.cpp
